--- a/02-network.Rmd
+++ b/02-network.Rmd
@@ -266,8 +266,8 @@ One way of doing this, is by taking some of the following steps:
 Using your approach what do you think: are fast-food restaurants, on average, more accessible for students at schools that are located within LSOAs with a lower IMD decile when compared to students at schools that are located within LSOAs with a higher IMD decile?
 
 ## Before you leave {#byl-w08}
-Having finished this tutorial on transport network analysis and, hopefully, having been able to independently conduct some further area-profiling using IMD deciles, [you have now reached the end of this week's content](https://www.youtube.com/watch?v=fFw7q-BLxLA). However, some additional things that you can consider in the context of accessibility analysis:
+Having finished this tutorial on transport network analysis and, hopefully, having been able to independently conduct some further area-profiling using IMD deciles, [you have now reached the end of this week's content](https://www.youtube.com/watch?v=fFw7q-BLxLA). However, there is some additional fundamental challenges to  consider in the context of transport network and accessibility analysis:
 
-1. Try to understand how the different weight profiles of the `dodgr` package work, how one would go about creating your own weight profile, and how using a different weight profile may affect the results of your analysis. 
-2. Inspect the unconnected segments of the extracted network. Why are they unconnected? Would they need to be connected? How would one do this?
-3. Consider how in this analysis all Origins and Destinations are mapped onto the closest network point. Why you think this is done? Is this always the best option? What alternative methods could you think of and how would you implement these?
+1. How do the different weight profiles of the `dodgr` package work? How would one go about creating your own weight profile? How would using a different weight profiles affect the results of your analysis?
+2. Why do we have unconnected segments in the extracted transport network? How would you inspect these unconnected segments? Would they need to be connected? If so, how would one do this?
+3. Why you think all Origins and Destinations are mapped onto the closest network points? Is this always the best option? What alternative methods could you think of and how would you implement these?
